--- a/paintings.html
+++ b/paintings.html
@@ -37,17 +37,17 @@
         <section class="work-item">
             <img src="images/art1.jpg" alt="Painting 1">
             <div class="info">
-                <h3>Painting Title 1</h3>
-                <p>Size: 50x70 cm</p>
+                <h3>Wave II</h3>
+                <p>Size: 60x80x2.5 cm</p>
                 <span class="status available">Available</span>
             </div>
         </section>
         <section class="work-item">
             <img src="images/art2.jpg" alt="Painting 2">
             <div class="info">
-                <h3>Painting Title 2</h3>
-                <p>Size: 60x80 cm</p>
-                <span class="status sold">Sold</span>
+                <h3>Flover</h3>
+                <p>Size: 100x70x2.5 cm</p>
+                <span class="status sold">Available</span>
             </div>
         </section>
     </main>
