--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Выпадающее меню -->
     <nav id="menu" class="hidden">
         <ul>
-            <li><a href="paintings.html">Paintings</a></li>
+            <li><a href="paintings.html">PAINTINGS</a></li>
             <li><a href="digital.html">Digital</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
