--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
         <img id="menu-toggle" src="images/logo.svg" alt="Menu" class="logo">
     </header>
 
-    <!-- Выпадающее меню -->
+     <!-- Выпадающее меню -->
     <nav id="menu" class="hidden">
         <ul>
-            <li><a href="paintings.html">Paintings</a></li>
-            <li><a href="digital.html">Digital</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="paintings.html">PAINTINGS</a></li>
+            <li><a href="digital.html">DIGITAL</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
 
