--- a/about.html
+++ b/about.html
@@ -12,9 +12,8 @@
    <header>
     <div class="profile">
         <h1 class="name">
-            <a href="index.html">
-                <span class="first-name">MAX</span><br>
-                <span class="last-name">MOISEEV</span>
+           <a href="index.html">
+                <span class="first-name">MAX MOISEEV</span><br>
             </a>
         </h1>
     </div>
