--- a/paintings.html
+++ b/paintings.html
@@ -13,8 +13,7 @@
     <div class="profile">
         <h1 class="name">
             <a href="index.html">
-                <span class="first-name">MAX</span><br>
-                <span class="last-name">MOISEEV</span>
+                <span class="first-name">MAX MOISEEV</span><br>
             </a>
         </h1>
     </div>
