--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Max Moiseev. All rights reserved.</p>
+        <p>&copy; All rights reserved.</p>
     </footer>
 
     <script src="js/scripts.js"></script>
