--- a/digital.html
+++ b/digital.html
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Max Moiseev. All rights reserved.</p>
+        <p>&copy; All rights reserved.</p>
     </footer>
 
     <script src="js/scripts.js"></script>
