--- a/paintings.html
+++ b/paintings.html
@@ -44,7 +44,7 @@
         <section class="work-item">
             <img src="images/art2.jpg" alt="Painting 2">
             <div class="info">
-                <h3>Flover</h3>
+                <h3>Flower</h3>
                 <p>Size: 100x70x2.5 cm</p>
                 <span class="status sold">Available</span>
             </div>
