--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             </ul>
         </section>
         <footer>
-        <p>&copy; All rights reserved.</p>
+        <small>© All rights reserved.</small>
         </footer>
     </main>
 
