--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             </form>
         </section>
         <footer>
-        <p>&copy; All rights reserved.</p>
+        <small>© All rights reserved.</small>
         </footer>
     </main>
 
