--- a/digital.html
+++ b/digital.html
@@ -54,7 +54,7 @@
             </div>
         </section>
         <footer>
-            <p>© All rights reserved.</p>
+            <small>© All rights reserved.</small>
         </footer>
     </main>
 
