--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Welcome to my portfolio!</p>
 
         <footer>
-        <p>&copy; All rights reserved.</p>
+        <small>© All rights reserved.</small>
         </footer>
 
     </main>
