--- a/paintings.html
+++ b/paintings.html
@@ -51,7 +51,7 @@
         </section>
         
         <footer>
-            <p>© All rights reserved.</p>
+            <small>© All rights reserved.</small>
         </footer>
     </main>
 
