--- a/paintings.html
+++ b/paintings.html
@@ -30,25 +30,39 @@
 
     <main class="gallery">
         <section class="work-item">
-    <div class="frame">
-        <img src="images/art1.jpg" alt="Painting 1">
-        <div class="info">
-            <h3>Wave II</h3>
-            <p>Size: 60x80x2.5 cm</p>
-            <span class="status available">Available</span>
-        </div>
-    </div>
+            <div class="frame">
+                <img src="images/art1.jpg" alt="Painting 1">
+                <div class="info">
+                    <h3>Wave II</h3>
+                    <p>Size: 60x80x2.5 cm</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>
         </section>
+
         <section class="work-item">
-    <div class="frame">
-        <img src="images/art2.jpg" alt="Painting 2">
-        <div class="info">
-            <h3>Flower</h3>
-            <p>Size: 100x70x2.5 cm</p>
-            <span class="status sold">Available</span>
-        </div>
-    </div>
-            
+            <div class="frame">
+                <img src="images/art2.jpg" alt="Painting 2">
+                <div class="info">
+                    <h3>Flower</h3>
+                    <p>Size: 100x70x2.5 cm</p>
+                    <span class="status sold" data-status="sold">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/art3.jpg" alt="Painting 3">
+                <div class="info">
+                    <h3>David</h3>
+                    <p>Size: 100x70x2.5 cm</p>
+                    <span class="status reserved" data-status="reserved">
+                    </span>
+                </div>
+            </div>    
         </section>
         
         <footer>
