--- a/digital.html
+++ b/digital.html
@@ -54,7 +54,7 @@
             
         </section>
         <footer>
-            <small>© All rights reserved.</small>
+            <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
         </footer>
     </main>
 
