--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Welcome to my portfolio!</p>
 
         <footer>
-        <small>© All rights reserved.</small>
+        <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
         </footer>
 
     </main>
