--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             </form>
         </section>
         <footer>
-        <small>© All rights reserved.</small>
+        <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
         </footer>
     </main>
 
