--- a/paintings.html
+++ b/paintings.html
@@ -66,7 +66,7 @@
         </section>
         
         <footer>
-            <small>© All rights reserved.</small>
+            <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
         </footer>
     </main>
 
