--- a/digital.html
+++ b/digital.html
@@ -35,20 +35,20 @@
     <main class="gallery">
         <section class="work-item">
             <div class="frame">
-                <img src="images/art01.jpg" alt="Digital Art 1">
+                <img src="images/Simulation_III.jpg" alt="Digital Art 1">
                 <div class="info">
-                <h3>Digital Art Title 1</h3>
-                <p>Size: 1920x1080 px</p>
+                <h3>Simulation III</h3>
+                <p>Digital</p>
             </div>
             </div>
             
         </section>
         <section class="work-item">
             <div class="frame">
-                <img src="images/art02.jpg" alt="Digital Art 2">
+                <img src="images/Simulation_II.jpg" alt="Digital Art 2">
                 <div class="info">
-                <h3>Digital Art Title 2</h3>
-                <p>Size: 1280x720 px</p>
+                <h3>Simulation II</h3>
+                <p>Digital</p>
             </div>
             </div>
             
