--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             </ul>
         </section>
         <footer>
-        <small>© All rights reserved.</small>
+        <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
         </footer>
     </main>
 
