--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Max Moiseev - Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="home-page">
     <!-- Шапка профиля -->
   <header>
     <div class="profile">
@@ -33,13 +33,18 @@
 
     <!-- Основное содержимое -->
     <main>
-        <p>Welcome to my portfolio!</p>
-
-        <footer>
-        <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
-        </footer>
-
+        <div class="slideshow-wrapper">
+            <section class="work-item slideshow-container">
+                <div class="frame">
+                    <img id="slideshow-image" src="" alt="Slideshow Image">
+                </div>
+        </section>
+        </div>
     </main>
+
+    <footer>
+        <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
+    </footer>
 
     <script src="js/scripts.js"></script>
 </body>
