--- a/paintings.html
+++ b/paintings.html
@@ -33,8 +33,9 @@
             <div class="frame">
                 <img src="images/art1.jpg" alt="Painting 1">
                 <div class="info">
-                    <h3>Wave II</h3>
+                    <h3>Wave II, 2025</h3>
                     <p>60x80 cm</p>
+                    <p>acrylic on canvas</p>
                     <span class="status available" data-status="available">
                     </span>
                 </div>
@@ -45,8 +46,9 @@
             <div class="frame">
                 <img src="images/art2.jpg" alt="Painting 2">
                 <div class="info">
-                    <h3>Flower</h3>
+                    <h3>Flower, 2024</h3>
                     <p>100x70 cm</p>
+                    <p>acrylic on canvas</p>
                     <span class="status sold" data-status="sold">
                     </span>
                 </div>
@@ -55,10 +57,11 @@
 
         <section class="work-item">
             <div class="frame">
-                <img src="images/art3.jpg" alt="Painting 3">
+                <img src="images/Wave_3.jpg" alt="Painting 3">
                 <div class="info">
-                    <h3>David</h3>
-                    <p>100x70 cm</p>
+                    <h3>Wave 3, 2024</h3>
+                    <p>100x150 cm</p>
+                    <p>oil on canvas</p>
                     <span class="status reserved" data-status="reserved">
                     </span>
                 </div>
