--- a/about.html
+++ b/about.html
@@ -36,16 +36,21 @@
         <section class="bio">
             <img src="images/profile.jpg" alt="Max Moiseev" class="profile-image">
             <div class="description">
-                <h2>About Me</h2>
-                <p>I am a contemporary artist specializing in both traditional and digital art forms. My works have been exhibited in galleries across the world.</p>
+                <h2>About</h2>
+                <p>Maxim Moiseev (b. 1989, Mogilev, Belarus) is an abstract artist exploring the field of consciousness through painting and digital media. He graduated from Vitebsk University in 2015 and has been living and working in Batumi, Georgia, since 2022.
+
+Maxim’s practice is rooted in spontaneous, intuitive gestures that evolve into mosaic-like, multilayered compositions reflecting the rhythms of internal and external processes. In acrylic works, he emphasizes the tactile depth and physicality of the medium, while in the digital realm he experiments with pixel textures, 3D grids, and layers of light, highlighting the nature of the digital gesture.
+
+Inspired by transcendental painting, Buddhist philosophy, and Jorge Luis Borges’ ideas of multiplicity, labyrinthine structures, and the point where all others converge, Maxim creates visual spaces where reality becomes fluid and transparent. His abstractions invite contemplation and inner dialogue, offering a moment to pause, feel the breath of the world, and respond to it from within.
+
+His work engages in a dialogue with contemporary abstract practices, exploring new visual forms of perception and presence.</p>
             </div>
         </section>
         <section class="exhibitions">
             <h2>Selected Exhibitions</h2>
             <ul>
-                <li>Gallery A, New York - 2022</li>
-                <li>Modern Art Museum, Paris - 2021</li>
-                <li>Contemporary Art Fair, Berlin - 2020</li>
+                <li>Solo show Solar Waves (2023, Soul Port, Batumi, Georgia)</li>
+                <li>Group exhibition Art-Minsk (2021, Minsk, Belarus)</li>
             </ul>
         </section>
         
