--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <img src="images/profile.jpg" alt="Max Moiseev" class="profile-image">
             <div class="contact-details">
                 <h2>Email Address:</h2>
-                <p>max.moiseev@example.com</p>
+                <p>maxmoiseevone@gmail.com</p>
             </div>
         </section>
         <section class="form-section">
