--- a/about.html
+++ b/about.html
@@ -60,6 +60,15 @@ His work engages in a dialogue with contemporary abstract practices, exploring n
         <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
         </footer>
 
+        <div class="social-links">
+    <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
+        <i class="fas fa-link"></i>
+    </a>
+</div>
+
     <script src="js/scripts.js"></script>
 </body>
 </html>
