--- a/paintings.html
+++ b/paintings.html
@@ -32,6 +32,19 @@
     <main class="gallery">
         <section class="work-item">
             <div class="frame">
+                <img src="images/WaveV.jpg" alt="Painting V">
+                <div class="info">
+                    <h3>Wave V, 2025</h3>
+                    <p>93x65 cm</p>
+                    <p>acrylic on linen</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
                 <img src="images/art1.jpg" alt="Painting 1">
                 <div class="info">
                     <h3>Wave II, 2025</h3>
@@ -49,8 +62,10 @@
                 <div class="info">
                     <h3>Flower, 2024</h3>
                     <p>100x70 cm</p>
+                    <p>39.37x27.55 in</p>
                     <p>acrylic on canvas</p>
-                    <span class="status sold" data-status="sold">
+                    <p>800 $</p>
+                    <span class="status available" data-status="available">
                     </span>
                 </div>
             </div>    
@@ -62,8 +77,37 @@
                 <div class="info">
                     <h3>Wave 3, 2024</h3>
                     <p>100x150 cm</p>
+                    <p>39.37x59.06 in</p>
                     <p>oil on canvas</p>
                     <span class="status reserved" data-status="reserved">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/PersonalJesus.jpg" alt="Jesus">
+                <div class="info">
+                    <h3>Personal Jesus, 2022</h3>
+                    <p>63x94 cm</p>
+                    <p>28.8x37 in</p>
+                    <p>acrylic on cotton</p>
+                    <span class="status sold" data-status="sold">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/Wave1.jpg" alt="Wave1">
+                <div class="info">
+                    <h3>Wave 1, 2022</h3>
+                    <p>63x94 cm</p>
+                    <p>28.8x37 in</p>
+                    <p>acrylic on cotton</p>
+                    <span class="status sold" data-status="sold">
                     </span>
                 </div>
             </div>    
