--- a/paintings.html
+++ b/paintings.html
@@ -79,7 +79,66 @@
                     <p>100x150 cm</p>
                     <p>39.37x59.06 in</p>
                     <p>oil on canvas</p>
-                    <span class="status reserved" data-status="reserved">
+                    <p>860 $</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/Wave4.jpg" alt="Wave4">
+                <div class="info">
+                    <h3>Wave 4, 2023</h3>
+                    <p>120x93 cm</p>
+                    <p>47.24x36.61 in</p>
+                    <p>acrylic on cotton</p>
+                    <p>600 $</p>
+                    <span class="status sold" data-status="sold">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/D33.jpg" alt="D33">
+                <div class="info">
+                    <h3>D33, 2023</h3>
+                    <p>95x93 cm</p>
+                    <p>37.4x24.8 in</p>
+                    <p>acrylic on cotton</p>
+                    <span class="status sold" data-status="sold">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/Wave7.jpg" alt="Wave7">
+                <div class="info">
+                    <h3>Wave 7, 2022</h3>
+                    <p>93x95 cm</p>
+                    <p>36.61x25.59 in</p>
+                    <p>acrylic on cotton</p>
+                    <span class="status sold" data-status="sold">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/Sunrise.jpg" alt="Sunrise">
+                <div class="info">
+                    <h3>Sunrise, 2022</h3>
+                    <p>95x93 cm</p>
+                    <p>37.4x24.8 in</p>
+                    <p>acrylic on cotton</p>
+                    <p>500 $</p>
+                    <span class="status available" data-status="available">
                     </span>
                 </div>
             </div>    
@@ -93,7 +152,7 @@
                     <p>63x94 cm</p>
                     <p>28.8x37 in</p>
                     <p>acrylic on cotton</p>
-                    <span class="status sold" data-status="sold">
+                    <span class="status reserved" data-status="reserved">
                     </span>
                 </div>
             </div>    
