--- a/paintings.html
+++ b/paintings.html
@@ -36,7 +36,39 @@
                 <div class="info">
                     <h3>Wave V, 2025</h3>
                     <p>93x65 cm</p>
+                    <p>36.61x25.08 in</p>
                     <p>acrylic on linen</p>
+                    <p>450 $</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/Wave_IV.jpg" alt="Wave_IV">
+                <div class="info">
+                    <h3>Wave IV, 2025</h3>
+                    <p>40x50 cm</p>
+                    <p>15.75x19.68 in</p>
+                    <p>acrylic on linen</p>
+                    <p>300 $</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/Wave-III.jpg" alt="Wave-III">
+                <div class="info">
+                    <h3>Wave III, 2025</h3>
+                    <p>60x80 cm</p>
+                    <p>23.62x31.5 in</p>
+                    <p>acrylic on canvas</p>
+                    <p>430 $</p>
                     <span class="status available" data-status="available">
                     </span>
                 </div>
@@ -49,7 +81,9 @@
                 <div class="info">
                     <h3>Wave II, 2025</h3>
                     <p>60x80 cm</p>
+                    <p>23.62x31.5 in</p>
                     <p>acrylic on canvas</p>
+                    <p>430 $</p>
                     <span class="status available" data-status="available">
                     </span>
                 </div>
@@ -57,6 +91,21 @@
         </section>
 
         <section class="work-item">
+            <div class="frame">
+                <img src="images/WaveI.jpg" alt="WaveI">
+                <div class="info">
+                    <h3>Wave I, 2025</h3>
+                    <p>40x50 cm</p>
+                    <p>15.75x19.68 in</p>
+                    <p>acrylic on canvas</p>
+                    <p>300 $</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>
+        </section>
+
+         <section class="work-item">
             <div class="frame">
                 <img src="images/art2.jpg" alt="Painting 2">
                 <div class="info">
@@ -70,6 +119,54 @@
                 </div>
             </div>    
         </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/David2.jpg" alt="David2">
+                <div class="info">
+                    <h3>David 2, 2024</h3>
+                    <p>26x21 cm</p>
+                    <p>10.24x8.27 in</p>
+                    <p>acrylic on cotton</p>
+                    <p>90 $</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/DirtyMonk.jpg" alt="DirtyMonk">
+                <div class="info">
+                    <h3>Dirty Monk, 2024</h3>
+                    <p>20x20 cm</p>
+                    <p>7.87x7.87 in</p>
+                    <p>acrylic on canvas</p>
+                    <p>75 $</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+       
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/LemonTree.jpg" alt="LemonTree">
+                <div class="info">
+                    <h3>Lemon Tree, 2024</h3>
+                    <p>40x30 cm</p>
+                    <p>15.75x11.81 in</p>
+                    <p>acrylic on canvas</p>
+                    <p>120 $</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
 
         <section class="work-item">
             <div class="frame">
@@ -88,6 +185,37 @@
 
         <section class="work-item">
             <div class="frame">
+                <img src="images/Peyote.jpg" alt="Peyote">
+                <div class="info">
+                    <h3>Peyote, 2024</h3>
+                    <p>95x93 cm</p>
+                    <p>37.4x24.8 in</p>
+                    <p>acrylic on cotton</p>
+                    <p>600 $</p>
+                    <span class="status available" data-status="available">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        
+
+        <section class="work-item">
+            <div class="frame">
+                <img src="images/Wave8.jpg" alt="Wave8">
+                <div class="info">
+                    <h3>Wave 8, 2023</h3>
+                    <p>95x93 cm</p>
+                    <p>37.4x24.8 in</p>
+                    <p>acrylic on cotton</p>
+                    <span class="status sold" data-status="sold">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
                 <img src="images/Wave4.jpg" alt="Wave4">
                 <div class="info">
                     <h3>Wave 4, 2023</h3>
@@ -95,7 +223,7 @@
                     <p>47.24x36.61 in</p>
                     <p>acrylic on cotton</p>
                     <p>600 $</p>
-                    <span class="status sold" data-status="sold">
+                    <span class="status available" data-status="available">
                     </span>
                 </div>
             </div>    
