--- a/paintings.html
+++ b/paintings.html
@@ -137,6 +137,20 @@
 
         <section class="work-item">
             <div class="frame">
+                <img src="images/David.jpg" alt="David">
+                <div class="info">
+                    <h3>David, 2024</h3>
+                    <p>26x21 cm</p>
+                    <p>10.24x8.27 in</p>
+                    <p>acrylic on cotton</p>
+                    <span class="status sold" data-status="sold">
+                    </span>
+                </div>
+            </div>    
+        </section>
+
+        <section class="work-item">
+            <div class="frame">
                 <img src="images/DirtyMonk.jpg" alt="DirtyMonk">
                 <div class="info">
                     <h3>Dirty Monk, 2024</h3>
