--- a/digital.html
+++ b/digital.html
@@ -52,35 +52,35 @@
                     <h3>Simulation IV, 2025</h3>
                 </div>
             </div>
-            <button class="prev-arrow" aria-label="Previous image"><i class="fas fa-chevron-left"></i></button>
-            <button class="next-arrow" aria-label="Next image"><i class="fas fa-chevron-right"></i></button>
+            <button class="prev-arrow" aria-label="Previous image"><i class="fas fa-angle-left"></i></button>
+            <button class="next-arrow" aria-label="Next image"><i class="fas fa-angle-right"></i></button>
         </section>
 
         <section class="work-item has-gallery" 
-        data-images='["images/Simulation_III.jpg", "images/Simulation_III.I.jpg", "images/Simulation_III_WB.jpg", "images/Simulation_III.II.jpg"]' 
-        data-captions='["Simulation III, 2025", "Simulation III.I, 2025", "Simulation III, WB, 2025", "Simulation III.II, 2025"]'>
-    <div class="frame">
-        <img src="images/Simulation_III.jpg" alt="Simulation_III">
-        <div class="info">
-            <h3>Simulation III, 2025</h3>
-        </div>
-    </div>
-    <button class="prev-arrow" aria-label="Previous image"><i class="fas fa-chevron-left"></i></button>
-    <button class="next-arrow" aria-label="Next image"><i class="fas fa-chevron-right"></i></button>
-</section>
+                data-images='["images/Simulation_III.jpg", "images/Simulation_III.I.jpg", "images/Simulation_III_WB.jpg", "images/Simulation_III.II.jpg"]' 
+                data-captions='["Simulation III, 2025", "Simulation III.I, 2025", "Simulation III, WB, 2025", "Simulation III.II, 2025"]'>
+            <div class="frame">
+                <img src="images/Simulation_III.jpg" alt="Simulation_III">
+                <div class="info">
+                    <h3>Simulation III, 2025</h3>
+                </div>
+            </div>
+            <button class="prev-arrow" aria-label="Previous image"><i class="fas fa-angle-left"></i></button>
+            <button class="next-arrow" aria-label="Next image"><i class="fas fa-angle-right"></i></button>
+        </section>
 
-<section class="work-item has-gallery" 
-        data-images='["images/Simulation_II.jpg", "images/Simulation_II.I.jpg", "images/Simulation_II.II.jpg", "images/Simulation_II.III.jpg"]' 
-        data-captions='["Simulation II, 2025", "Simulation II.I, 2025", "Simulation II.II, 2025", "Simulation II.III, 2025"]'>
-    <div class="frame">
-        <img src="images/Simulation_II.jpg" alt="Simulation_II">
-        <div class="info">
-            <h3>Simulation II, 2025</h3>
-        </div>
-    </div>
-    <button class="prev-arrow" aria-label="Previous image"><i class="fas fa-chevron-left"></i></button>
-    <button class="next-arrow" aria-label="Next image"><i class="fas fa-chevron-right"></i></button>
-</section>
+        <section class="work-item has-gallery" 
+                data-images='["images/Simulation_II.jpg", "images/Simulation_II.I.jpg", "images/Simulation_II.II.jpg", "images/Simulation_II.III.jpg"]' 
+                data-captions='["Simulation II, 2025", "Simulation II.I, 2025", "Simulation II.II, 2025", "Simulation II.III, 2025"]'>
+            <div class="frame">
+                <img src="images/Simulation_II.jpg" alt="Simulation_II">
+                <div class="info">
+                    <h3>Simulation II, 2025</h3>
+                </div>
+            </div>
+            <button class="prev-arrow" aria-label="Previous image"><i class="fas fa-angle-left"></i></button>
+            <button class="next-arrow" aria-label="Next image"><i class="fas fa-angle-right"></i></button>
+        </section>
 
         <section class="work-item">
             <div class="frame">
