--- a/digital.html
+++ b/digital.html
@@ -91,13 +91,17 @@
             </div>
         </section>
 
-        <section class="work-item">
+        <section class="work-item has-gallery" 
+                data-images='["images/Good_Thoughts.jpg", "images/Good_Thoughts_Inverse.jpg", "images/Good_Thoughts_Verse.jpg", "images/Good_Thoughts_Verse_I.jpg", "images/Good_Thoughts_Verse_II.jpg"]' 
+                data-captions='["Good Thoughts, 2018", "Good Thoughts Inverse, 2018", "Good Thoughts Verse, 2018", "Good Thoughts Verse I, 2018", "Good Thoughts Verse II, 2018"]'>
             <div class="frame">
                 <img src="images/Good_Thoughts.jpg" alt="Good_Thoughts">
                 <div class="info">
                     <h3>Good Thoughts, 2018</h3>
                 </div>
             </div>
+            <button class="prev-arrow" aria-label="Previous image"><i class="fas fa-angle-left"></i></button>
+            <button class="next-arrow" aria-label="Next image"><i class="fas fa-angle-right"></i></button>
         </section>
     </main>
 
