--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <section class="contact-info">
             <img src="images/profile.jpg" alt="Max Moiseev" class="profile-image">
             <div class="contact-details">
-                <h2>Email Address:</h2>
+                <h2>Email :</h2>
                 <p>maxmoiseevone@gmail.com</p>
             </div>
         </section>
