--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@ His work engages in a dialogue with contemporary abstract practices, exploring n
         <i class="fab fa-instagram"></i>
     </a>
     <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
-        <i class="fas fa-link"></i>
+        <img src="images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
     </a>
 </div>
 
