--- a/digital.html
+++ b/digital.html
@@ -110,13 +110,13 @@
     </footer>
 
     <div class="social-links">
-        <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
-            <i class="fas fa-link"></i>
-        </a>
-    </div>
+    <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
+        <img src="images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
+    </a>
+</div>
 
     <script src="js/scripts.js"></script>
 </body>
