--- a/contact.html
+++ b/contact.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <!-- Шапка профиля -->
-   <header>
-    <div class="profile">
-        <h1 class="name">
-            <a href="index.html">
-                <span class="first-name">MAX MOISEEV</span><br>
-            </a>
-        </h1>
-    </div>
+    <header>
+        <div class="profile">
+            <h1 class="name">
+                <a href="index.html">
+                    <span class="first-name">MAX MOISEEV</span><br>
+                </a>
+            </h1>
+        </div>
         <!-- Кнопка меню (логотип) -->
         <img id="menu-toggle" src="images/logo.svg" alt="Menu" class="logo">
     </header>
 
-     <!-- Выпадающее меню -->
+    <!-- Выпадающее меню -->
     <nav id="menu" class="hidden">
         <ul>
             <li><a href="paintings.html">PAINTINGS</a></li>
@@ -43,29 +43,86 @@
         </section>
         <section class="form-section">
             <h2>Contact Me</h2>
-            <form action="https://formspree.io/f/xrbygqkr" method="POST">
+            <form id="contact-form">
+                <input type="hidden" name="access_key" value="aa98780e-6251-4072-b5d4-316b617efdb4">
+                <input type="hidden" name="subject" value="New Contact Form Submission">
                 <input type="text" name="name" placeholder="Name" required>
-                <input type="email" name="_replyto" placeholder="Email" required>
+                <input type="email" name="email" placeholder="Email" required>
                 <textarea name="message" placeholder="Message" required></textarea>
                 <button type="submit">Send</button>
             </form>
         </section>
-        
+
+        <!-- Блок для сообщения об успешной отправке -->
+        <section id="success-message" style="display: none; text-align: center;">
+            <h2>Success!</h2>
+            <p>Thank you for your message. I will get back to you soon.</p>
+            <button onclick="window.location.href='contact.html?reset=true'">Back</button>
+        </section>
     </main>
 
     <footer>
         <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
-        </footer>
+    </footer>
 
-        <div class="social-links">
-    <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
-        <img src="images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
-    </a>
-</div>
+    <div class="social-links">
+        <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
+            <img src="images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
+        </a>
+    </div>
 
     <script src="js/scripts.js"></script>
+    <script>
+        // Очистка полей формы при загрузке страницы с параметром ?reset=true
+        document.addEventListener("DOMContentLoaded", function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.get("reset") === "true") {
+                const form = document.getElementById("contact-form");
+                if (form) {
+                    form.reset(); // Очищаем все поля формы
+                }
+            }
+        });
+
+        // Обработка отправки формы через Web3Forms
+        const form = document.getElementById("contact-form");
+        const formSection = document.querySelector(".form-section");
+        const successMessage = document.getElementById("success-message");
+
+        form.addEventListener("submit", async function (e) {
+            e.preventDefault(); // Отменяем стандартную отправку формы
+
+            // Собираем данные формы
+            const formData = new FormData(form);
+
+            try {
+                const response = await fetch("https://api.web3forms.com/submit", {
+                    method: "POST",
+                    body: formData
+                });
+
+                const result = await response.json();
+
+                if (result.success) {
+                    // Скрываем форму
+                    formSection.style.display = "none";
+                    // Показываем сообщение об успешной отправке
+                    successMessage.style.display = "block";
+
+                    // Автоматический возврат через 10 секунд
+                    setTimeout(() => {
+                        window.location.href = "contact.html?reset=true";
+                    }, 10000);
+                } else {
+                    alert("Error sending message. Please try again later.");
+                }
+            } catch (error) {
+                alert("Error sending message. Please try again later.");
+            }
+        });
+    </script>
 </body>
 </html>
