--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
-    <title>Contact - Max Moiseev</title>
+    <title>Contact</title>
+    <!-- Favicon -->
+<link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
+<!-- Apple Touch Icon (для iOS) -->
+<link rel="apple-touch-icon" href="images/logo.png">
+<!-- Microsoft Windows Tiles -->
+<meta name="msapplication-TileImage" content="images/logo.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
