--- a/about.html
+++ b/about.html
@@ -5,7 +5,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
-    <title>About - Max Moiseev</title>
+    <title>About</title>
+    <!-- Favicon -->
+<link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
+<!-- Apple Touch Icon (для iOS) -->
+<link rel="apple-touch-icon" href="images/logo.png">
+<!-- Microsoft Windows Tiles -->
+<meta name="msapplication-TileImage" content="images/logo.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -38,9 +44,9 @@
             <img src="images/profile.jpg" alt="Max Moiseev" class="profile-image">
             <div class="description">
                 <h2>About</h2>
-                <p>Maxim Moiseev (b. 1989, Mogilev, Belarus) is an abstract artist exploring the field of consciousness through painting and digital media. He graduated from Vitebsk University in 2015 and has been living and working in Batumi, Georgia, since 2022.
+                <p>Maksim Moiseev (b. 1989, Mogilev, Belarus) is an abstract artist exploring the field of consciousness through painting and digital media. He graduated from Vitebsk University in 2015 and has been living and working in Batumi, Georgia, since 2022.
 
-Maxim’s practice is rooted in spontaneous, intuitive gestures that evolve into mosaic-like, multilayered compositions reflecting the rhythms of internal and external processes. In acrylic works, he emphasizes the tactile depth and physicality of the medium, while in the digital realm he experiments with pixel textures, 3D grids, and layers of light, highlighting the nature of the digital gesture.
+Maksim’s practice is rooted in spontaneous, intuitive gestures that evolve into mosaic-like, multilayered compositions reflecting the rhythms of internal and external processes. In acrylic works, he emphasizes the tactile depth and physicality of the medium, while in the digital realm he experiments with pixel textures, 3D grids, and layers of light, highlighting the nature of the digital gesture.
 
 Inspired by transcendental painting, Buddhist philosophy, and Jorge Luis Borges’ ideas of multiplicity, labyrinthine structures, and the point where all others converge, Maxim creates visual spaces where reality becomes fluid and transparent. His abstractions invite contemplation and inner dialogue, offering a moment to pause, feel the breath of the world, and respond to it from within.
 
