--- a/digital.html
+++ b/digital.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200&family=Roboto:wght@100;200&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200&family=Roboto:wght@100;200&display=swap" as="style" onload="this.rel='stylesheet'">
+    <noscript>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200&family=Roboto:wght@100;200&display=swap" rel="stylesheet">
+    </noscript>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
     <title>Digital</title>
+    <!-- SEO Метатеги -->
+    <meta name="description" content="Digital artworks by Max Moiseev, created in 2018-2025. Explore Simulation series and more.">
+    <meta name="keywords" content="Max Moiseev, digital art, Simulation series, contemporary art">
+    <meta name="author" content="Max Moiseev">
+    <!-- Open Graph для соцсетей -->
+    <meta property="og:title" content="Digital - Max Moiseev">
+    <meta property="og:description" content="Explore digital artworks by Max Moiseev, including the Simulation series (2018-2025).">
+    <meta property="og:image" content="https://maxmoiseev.art/images/Simulation_V.jpg">
+    <meta property="og:url" content="https://maxmoiseev.art/digital.html">
+    <meta property="og:type" content="website">
     <!-- Favicon -->
 <link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
 <!-- Apple Touch Icon (для iOS) -->
