--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="Max Moiseev, digital art, Simulation series, contemporary art">
     <meta name="author" content="Max Moiseev">
     <!-- Open Graph для соцсетей -->
-    <meta property="og:title" content="Digital - Max Moiseev">
+    <meta property="og:title" content="Main">
     <meta property="og:description" content="Explore digital artworks by Max Moiseev, including the Simulation series (2018-2025).">
     <meta property="og:image" content="https://maxmoiseev.art/images/Simulation_V.jpg">
     <meta property="og:url" content="https://maxmoiseev.art/digital.html">
