--- a/about.html
+++ b/about.html
@@ -10,15 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
     <title>About</title>
     <!-- SEO Метатеги -->
-    <meta name="description" content="Digital artworks by Max Moiseev, created in 2018-2025. Explore Simulation series and more.">
-    <meta name="keywords" content="Max Moiseev, digital art, Simulation series, contemporary art">
-    <meta name="author" content="Max Moiseev">
-    <!-- Open Graph для соцсетей -->
-    <meta property="og:title" content="About">
-    <meta property="og:description" content="Explore digital artworks by Max Moiseev, including the Simulation series (2018-2025).">
-    <meta property="og:image" content="https://maxmoiseev.art/images/Simulation_V.jpg">
-    <meta property="og:url" content="https://maxmoiseev.art/digital.html">
-    <meta property="og:type" content="website">
+    <meta name="description" content="About Max Moiseev, a contemporary artist. Learn about his journey, exhibitions, and artistic process.">
+<meta name="keywords" content="Max Moiseev, about, contemporary artist, exhibitions">
+<meta name="author" content="Max Moiseev">
+<meta property="og:title" content="About">
+<meta property="og:description" content="Learn about Max Moiseev, his artistic journey, and exhibitions.">
+<meta property="og:image" content="https://maxmoiseev.art/images/profile-image.jpg">
+<meta property="og:url" content="https://maxmoiseev.art/about.html">
+<meta property="og:type" content="website">
     <!-- Favicon -->
 <link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
 <!-- Apple Touch Icon (для iOS) -->
