--- a/paintings.html
+++ b/paintings.html
@@ -10,15 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
     <title>Paintings</title>
     <!-- SEO Метатеги -->
-    <meta name="description" content="Digital artworks by Max Moiseev, created in 2018-2025. Explore Simulation series and more.">
-    <meta name="keywords" content="Max Moiseev, digital art, Simulation series, contemporary art">
-    <meta name="author" content="Max Moiseev">
-    <!-- Open Graph для соцсетей -->
-    <meta property="og:title" content="Paintings">
-    <meta property="og:description" content="Explore digital artworks by Max Moiseev, including the Simulation series (2018-2025).">
-    <meta property="og:image" content="https://maxmoiseev.art/images/Simulation_V.jpg">
-    <meta property="og:url" content="https://maxmoiseev.art/digital.html">
-    <meta property="og:type" content="website">
+    <meta name="description" content="Paintings by Max Moiseev, created in 2018-2025. Explore Lemon Tree, Wave series, and more.">
+<meta name="keywords" content="Max Moiseev, paintings, Lemon Tree, Wave series, contemporary art">
+<meta name="author" content="Max Moiseev">
+<meta property="og:title" content="Paintings">
+<meta property="og:description" content="Explore paintings by Max Moiseev, including Lemon Tree and Wave series (2018-2025).">
+<meta property="og:image" content="https://maxmoiseev.art/images/LemonTree.jpg">
+<meta property="og:url" content="https://maxmoiseev.art/paintings.html">
+<meta property="og:type" content="website">
     <!-- Favicon -->
 <link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
 <!-- Apple Touch Icon (для iOS) -->
