--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
-    <title>About</title>
+    <title>MAX MOISEEV | About</title>
     <!-- SEO Метатеги -->
     <meta name="description" content="About Max Moiseev, a contemporary artist. Learn about his journey, exhibitions, and artistic process.">
 <meta name="keywords" content="Max Moiseev, about, contemporary artist, exhibitions">
