--- a/digital.html
+++ b/digital.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
-    <title>Digital</title>
+    <title>MAX MOISEEV | Digital</title>
     <!-- SEO Метатеги -->
     <meta name="description" content="Digital artworks by Max Moiseev, created in 2018-2025. Explore Simulation series and more.">
     <meta name="keywords" content="Max Moiseev, digital art, Simulation series, contemporary art">
