--- a/paintings.html
+++ b/paintings.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
-    <title>Paintings</title>
+    <title>MAX MOISEEV | Paintings</title>
     <!-- SEO Метатеги -->
     <meta name="description" content="Paintings by Max Moiseev, created in 2018-2025. Explore Lemon Tree, Wave series, and more.">
 <meta name="keywords" content="Max Moiseev, paintings, Lemon Tree, Wave series, contemporary art">
