--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
-    <title>MAX MOISEEV</title>
+    <title>MAX MOISEEV1</title>
     <!-- SEO Метатеги -->
     <meta name="description" content="Official website of Max Moiseev, a contemporary artist. Explore paintings and digital art.">
 <meta name="keywords" content="Max Moiseev, contemporary art, paintings, digital art">
